--- a/src/app.css
+++ b/src/app.css
@@ -5,27 +5,33 @@
 
 @layer base {
 	h1 {
-		@apply mb-4 text-4xl font-bold;
+		@apply mb-2 text-4xl font-bold
+		sm:mb-4;
 	}
 
 	h2 {
-		@apply mb-4 text-3xl font-bold;
+		@apply mb-2 text-3xl font-bold
+		sm:mb-4;
 	}
 
 	h3 {
-		@apply mb-4 text-2xl font-bold;
+		@apply mb-2 text-2xl font-bold
+		sm:mb-4;
 	}
 
 	h4 {
-		@apply mb-4 text-xl font-bold;
+		@apply mb-2 text-xl font-bold
+		sm:mb-4;
 	}
 
 	h5 {
-		@apply mb-4 text-lg font-bold;
+		@apply mb-2 text-lg font-bold
+		sm:mb-4;
 	}
 
 	h6 {
-		@apply mb-4 text-base font-bold;
+		@apply mb-2 text-base font-bold
+		sm:mb-4;
 	}
 
 	.wi {
